some fixes, more metadata and navigation

--- a/css/main.less
+++ b/css/main.less
@@ -1009,6 +1009,29 @@ input[type=submit] {
 				}
 			}
 		}
+		.header-meta {
+			margin: 0;
+			padding: 0 40px 20px 40px;
+			font-weight: 200;
+			font-size: 11px;
+			.buttons {
+				float: right;
+			}
+			p {
+				margin: 0 0 5px;
+				a {
+					font-size: 12px;
+					text-transform: none;
+					text-decoration: none;
+					font-weight: 600;
+					color: #fff;
+				}
+				.lsf {
+					color: #999;
+					margin-right: 5px;
+				}
+			}
+		}
 		.artists {
 			margin: 0;
 			padding: 0 0 20px 40px;
@@ -1059,7 +1082,7 @@ input[type=submit] {
 		}
 	}
 	.post-data {
-		padding: 20px 20px 0;
+		padding: 20px 40px 0;
 		h4 {
 			color: #999;
 			text-transform: uppercase;
@@ -1094,7 +1117,7 @@ input[type=submit] {
 		}
 	}
 	.post-content {
-		margin: 20px 20px 40px;
+		margin: 20px 40px 40px;
 	}
 	.featured-section {
 		.box-shadow(0 0 10px #0f0f0f);
@@ -1175,7 +1198,7 @@ input[type=submit] {
 			}
 		}
 		.actions {
-			margin: 0 20px 20px;
+			margin: 0 40px 20px;
 			a {
 				color: #999;
 				text-decoration: none;
@@ -1184,6 +1207,20 @@ input[type=submit] {
 				}
 				.button;
 			}
+		}
+	}
+	.navigation {
+		text-align: center;
+		margin: 40px 0;
+		a {
+			margin: 0 10px;
+			padding: 10px;
+			.gradient(#f0f0f0, #bbb, #f0f0f0);
+			text-transform: uppercase;
+			font-weight: 600;
+			text-decoration: none;
+			font-size: 12px;
+			line-height: 12px;
 		}
 	}
 }
@@ -1536,6 +1573,15 @@ input[type=submit] {
 		}
 		.recent {
 			margin-top: 40px;
+		}
+	}
+	.navigation {
+		font-size: 18px;
+		line-height: 18px;
+		font-weight: 200;
+		text-align: center;
+		a {
+			text-decoration: none;
 		}
 	}
 }
