--- a/css/main.less
+++ b/css/main.less
@@ -874,6 +874,49 @@ input[type=submit] {
 		position: relative;
 		z-index: 4;
 	}
+	.story-points {
+		.popup {
+			.border-radius(0);
+			img {
+				width: 100%;
+				height: auto;
+				display: block;
+				margin: 0 0 10px;
+			}
+			.post-categories {
+				margin: 0;
+				padding: 0;
+				li {
+					margin: 0;
+					padding: 0;
+					a {
+						text-decoration: none;
+						text-transform: uppercase;
+						font-weight: 600;
+						color: #666;
+					}
+				}
+			}
+			h4 {
+				font-weight: 200;
+			}
+			.meta {
+				font-size: 11px;
+				font-weight: 200;
+				p {
+					margin: 0 0 5px;
+					.lsf {
+						margin-right: 5px;
+						color: #666;
+					}
+					a {
+						text-decoration: none;
+						font-weight: 600;
+					}
+				}
+			}
+		}
+	}
 }
 
 .displaying-map #content {
