--- a/css/main.less
+++ b/css/main.less
@@ -639,6 +639,7 @@ input[type=submit] {
 				}
 			}
 			.post-header {
+				padding: 20px;
 				.category {
 					text-transform: uppercase;
 					font-weight: 200;
@@ -1712,6 +1713,27 @@ input[type=submit] {
 					&:hover {
 						color: #f1f1f1;
 					}
+				}
+			}
+		}
+	}
+	.social {
+		margin: 10px 0;
+		float: right;
+		.social-interaction {
+			float: left;
+			margin-right: 20px;
+		}
+		.social-links {
+			margin-top: 2px;
+			float: right;
+			font-size: 20px;
+			line-height: 20px;
+			a {
+				color: #555;
+				margin-left: 10px;
+				&:hover {
+					color: #eee;
 				}
 			}
 		}
