--- a/css/main.css
+++ b/css/main.css
@@ -165,8 +165,8 @@ html::-webkit-scrollbar-thumb,body::-webkit-scrollbar-thumb{background:#111;}htm
 .artwork-mosaic.images-2 .image-1-container{width:auto !important;height:100% !important;}.artwork-mosaic.images-2 .image-1-container img{margin-left:-20%;}
 .artwork-mosaic.images-2 .image-2-container{width:auto !important;height:100%;}.artwork-mosaic.images-2 .image-2-container img{margin-left:55%;}
 #colophon{position:fixed;bottom:0;height:40px;width:100%;padding:0;background:#1f1f1f;}#colophon #footer-nav ul{margin:15px 0;padding:0;}#colophon #footer-nav ul li{float:left;margin:0;padding:0;font-size:10px;line-height:10px;}#colophon #footer-nav ul li a{display:block;color:#999;text-decoration:none;text-transform:uppercase;font-weight:800;}#colophon #footer-nav ul li a:hover{color:#f1f1f1;}
-#colophon .social{margin:10px 0;float:right;}#colophon .social .social-interaction{float:left;margin-right:20px;}
-#colophon .social .social-links{margin-top:2px;float:right;font-size:20px;line-height:20px;}#colophon .social .social-links a{color:#555;margin-left:10px;}#colophon .social .social-links a:hover{color:#eee;}
+#colophon .social{margin:10px 0;float:right;}#colophon .social .social-interaction{float:right;margin-left:20px;}#colophon .social .social-interaction>a,#colophon .social .social-interaction>div{margin-left:10px;}
+#colophon .social .social-links{margin-top:2px;float:left;font-size:20px;line-height:20px;}#colophon .social .social-links a{color:#555;margin-left:10px;}#colophon .social .social-links a:hover{color:#eee;}
 #ui-datepicker-div,.ui-autocomplete{z-index:9999 !important;}
 #ui-datepicker-div .ui-datepicker-title select{display:inline !important;}
 body .ui-corner-all{-webkit-border-radius:0 0 0 0;-khtml-border-radius:0 0 0 0;-moz-border-radius:0 0 0 0;-o-border-radius:0 0 0 0;border-radius:0 0 0 0;}
