--- a/css/main.less
+++ b/css/main.less
@@ -1721,12 +1721,16 @@ input[type=submit] {
 		margin: 10px 0;
 		float: right;
 		.social-interaction {
-			float: left;
-			margin-right: 20px;
+			float: right;
+			margin-left: 20px;
+			> a,
+			> div {
+				margin-left: 10px;
+			}
 		}
 		.social-links {
 			margin-top: 2px;
-			float: right;
+			float: left;
 			font-size: 20px;
 			line-height: 20px;
 			a {
