--- a/css/main.less
+++ b/css/main.less
@@ -257,8 +257,7 @@ input[type=submit] {
 				display: table;
 				text-align: center;
 				img {
-					display: table-cell;
-					vertical-align: middle;
+					display: block;
 					.transition(all .2s ease-in-out);
 				}
 			}
@@ -1729,7 +1728,6 @@ input[type=submit] {
 			}
 		}
 		.social-links {
-			margin-top: 2px;
 			float: left;
 			font-size: 20px;
 			line-height: 20px;
