--- a/css/main.less
+++ b/css/main.less
@@ -1699,7 +1699,7 @@ input[type=submit] {
 			padding: 0;
 			li {
 				float: left;
-				margin: 0;
+				margin: 0 10px 0 0;
 				padding: 0;
 				font-size: 10px;
 				line-height: 10px;
