fix some styles

--- a/css/main.less
+++ b/css/main.less
@@ -761,6 +761,7 @@ input[type=submit] {
 					.post-header {
 						position: absolute;
 						bottom: 0;
+						padding: 10px 10px 10px 20px;
 						.category {
 							float: none;
 							font-weight: 200;
@@ -773,9 +774,9 @@ input[type=submit] {
 						}
 						h3 {
 							font-weight: 800;
-							font-size: 22px;
-							line-height: 30px;
-							margin-bottom: 20px;
+							font-size: 18px;
+							line-height: 24px;
+							margin-bottom: 0;
 							margin-left: 50px;
 							.transition(all 1.5s ease-in-out);
 							a {
