--- a/css/main.less
+++ b/css/main.less
@@ -1287,6 +1287,9 @@ input[type=submit] {
 				font-weight: 200;
 				text-transform: uppercase;
 				margin-bottom: 20px;
+				margin-top: 15px;
+				font-size: 20px;
+				line-height: 24px;
 			}
 			.close {
 				float: right;
