--- a/css/main.less
+++ b/css/main.less
@@ -1700,11 +1700,11 @@ input[type=submit] {
 	z-index: 101;
 	#footer-nav {
 		ul {
-			margin: 25px 0;
+			margin: 25px 0 15px;
 			padding: 0;
 			li {
 				float: left;
-				margin: 0 10px 0 0;
+				margin: 0 10px 10px 0;
 				padding: 0;
 				font-size: 10px;
 				line-height: 10px;
