--- a/css/main.less
+++ b/css/main.less
@@ -1161,6 +1161,10 @@ input[type=submit] {
 	}
 	.post-content {
 		margin: 20px 40px 40px;
+		a,
+		strong {
+			color: #f0f0f0;
+		}
 	}
 	.featured-section {
 		.box-shadow(0 0 10px #0f0f0f);
@@ -1741,9 +1745,9 @@ input[type=submit] {
 	.cc {
 		p {
 			position: relative;
-			margin: 25px 0;
+			margin: 20px 0;
 			img {
-				opacity: .7;
+				opacity: .9;
 			}
 			.text {
 				display: none;
@@ -1753,17 +1757,17 @@ input[type=submit] {
 				left: 50%;
 				margin-left: -90px;
 				width: 150px;
-				background: #333;
+				background: #111;
 				padding: 10px;
 				font-size: 11px;
-				.box-shadow(0 2px 5px rgba(0,0,0,0.6));
+				.box-shadow(0 2px 5px rgba(0,0,0,0.8));
 				&:after {
 					content: '';
 					width: 0;
 					height: 0;
 					border-left: 10px solid transparent;
 					border-right: 10px solid transparent;
-					border-top: 10px solid #333;
+					border-top: 10px solid #111;
 					position: absolute;
 					bottom: -10px;
 					left: 50%;
@@ -1778,7 +1782,7 @@ input[type=submit] {
 		}
 	}
 	.social {
-		margin: 10px 0;
+		margin: 20px 0;
 		float: right;
 		.social-interaction {
 			float: right;
@@ -1789,16 +1793,55 @@ input[type=submit] {
 			}
 		}
 		.social-links {
-			float: right;
-			clear: both;
+			float: left;
 			margin-bottom: 8px;
 			font-size: 15px;
 			line-height: 15px;
+			position: relative;
 			a {
-				color: #555;
-				margin-left: 10px;
+				color: #999;
+				margin: 0 5px;
 				&:hover {
 					color: #eee;
+				}
+			}
+			.social-toggler {
+				cursor: default;
+				font-size: 22px;
+				line-height: 22px;
+				color: #999;
+			}
+			.social-container {
+				position: absolute;
+				bottom: 15px;
+				left: 50%;
+				margin-left: -75px;
+				width: 150px;
+				display: none;
+				.social-content {
+					margin-bottom: 10px;
+					background: #111;
+					padding: 10px;
+					text-align: center;
+					.box-shadow(0 2px 5px rgba(0,0,0,0.8));
+					&:after {
+						content: '';
+						width: 0;
+						height: 0;
+						border-left: 10px solid transparent;
+						border-right: 10px solid transparent;
+						border-top: 10px solid #111;
+						position: absolute;
+						bottom: 0px;
+						left: 50%;
+						margin-left: -10px;
+						z-index: 1000;
+					}
+				}
+			}
+			&:hover {
+				.social-container {
+					display: block;
 				}
 			}
 		}
