fix colophon menu

--- a/css/main.less
+++ b/css/main.less
@@ -1703,23 +1703,25 @@ input[type=submit] {
 	background: #1f1f1f;
 	z-index: 101;
 	#footer-nav {
-		ul {
-			margin: 25px 0 15px;
-			padding: 0;
-			li {
-				float: left;
-				margin: 0 10px 10px 0;
+		.menu {
+			ul {
+				margin: 25px 0 15px;
 				padding: 0;
-				font-size: 10px;
-				line-height: 10px;
-				a {
-					display: block;
-					color: #999;
-					text-decoration: none;
-					text-transform: uppercase;
-					font-weight: 800;
-					&:hover {
-						color: #f1f1f1;
+				li {
+					float: left;
+					margin: 0 10px 10px 0;
+					padding: 0;
+					font-size: 10px;
+					line-height: 10px;
+					a {
+						display: block;
+						color: #999;
+						text-decoration: none;
+						text-transform: uppercase;
+						font-weight: 800;
+						&:hover {
+							color: #f1f1f1;
+						}
 					}
 				}
 			}
