--- a/css/main.less
+++ b/css/main.less
@@ -1704,24 +1704,24 @@ input[type=submit] {
 	z-index: 101;
 	#footer-nav {
 		.menu {
-			ul {
-				margin: 25px 0 15px;
+			margin: 25px 0 15px;
+			padding: 0;
+			li {
+				float: left;
+				margin: 0 10px 10px 0;
 				padding: 0;
-				li {
-					float: left;
-					margin: 0 10px 10px 0;
-					padding: 0;
+				font-size: 10px;
+				line-height: 10px;
+				a {
 					font-size: 10px;
 					line-height: 10px;
-					a {
-						display: block;
-						color: #999;
-						text-decoration: none;
-						text-transform: uppercase;
-						font-weight: 800;
-						&:hover {
-							color: #f1f1f1;
-						}
+					display: block;
+					color: #999;
+					text-decoration: none;
+					text-transform: uppercase;
+					font-weight: 800;
+					&:hover {
+						color: #f1f1f1;
 					}
 				}
 			}
