--- a/css/main.less
+++ b/css/main.less
@@ -2348,7 +2348,7 @@ body.wysiwyg p {
 	.displaying-map #content,
 	.middle-content {
 		top: @top/1.2;
-		padding-top: 0;
+		padding-top: 40px;
 	}
 	.home .map-container,
 	.map-container {
