--- a/css/main.less
+++ b/css/main.less
@@ -857,6 +857,12 @@ input[type=submit] {
 	bottom: @bottom;
 	left: 0;
 	right: 35%;
+	.home-link {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		z-index: 100;
+	}
 	.streetview,
 	.map {
 		width: 100%;
