add js widget for category filtering

--- a/css/main.less
+++ b/css/main.less
@@ -873,6 +873,26 @@ input[type=submit] {
 		right: 10px;
 		z-index: 100;
 	}
+	.category-filters {
+		position: absolute;
+		top: 50%;
+		right: 0;
+		z-index: 100;
+		.box-shadow(0 0 10px rgba(0,0,0,0.8));
+		li {
+			font-size: 12px;
+			line-height: 12px;
+			text-transform: uppercase;
+			display: block;
+			position: relative;
+			cursor: pointer;
+			padding: 10px;
+			background: #555;
+			color: #f0f0f0;
+			font-weight: 200;
+			margin: 0;
+		}
+	}
 	.streetview,
 	.map {
 		width: 100%;
