better css for category filtering

--- a/css/main.less
+++ b/css/main.less
@@ -875,8 +875,8 @@ input[type=submit] {
 	}
 	.category-filters {
 		position: absolute;
-		top: 50%;
-		right: 0;
+		top: 20px;
+		right: 20px;
 		z-index: 100;
 		.box-shadow(0 0 10px rgba(0,0,0,0.8));
 		li {
