add birth/date and age system

--- a/css/main.less
+++ b/css/main.less
@@ -1096,6 +1096,9 @@ input[type=submit] {
 			.buttons {
 				float: right;
 			}
+			strong {
+				color: #f0f0f0;
+			}
 			p {
 				margin: 0 0 5px;
 				a {
