--- a/css/main.less
+++ b/css/main.less
@@ -655,6 +655,7 @@ input[type=submit] {
 	bottom: @bottom;
 	left: 0;
 	right: 35%;
+	height: auto;
 	.home-link {
 		position: absolute;
 		top: 10px;
@@ -745,6 +746,7 @@ input[type=submit] {
 
 .displaying-map #content {
 	width: 35%;
+	height: auto;
 	min-width: 350px;
 	color: #f0f0f0;
 	background: #333;
@@ -1035,6 +1037,7 @@ input[type=submit] {
 		margin-top: -40px;
 		margin-bottom: 40px;
 		position: relative;
+		height: 40%;
 		.section-title {
 			margin: 0;
 			position: absolute;
@@ -1053,7 +1056,6 @@ input[type=submit] {
 		}
 		.posts-section.carousel {
 			padding: 0;
-			height: 40%;
 			.posts-list {
 				border: 0;
 				li {
@@ -1085,6 +1087,22 @@ input[type=submit] {
 		margin: 0 40px;
 		.post-content {
 			margin: 0;
+		}
+	}
+	.popular-section {
+		height: 30%;
+		position: relative;
+		overflow: hidden;
+		margin-bottom: 40px;
+		.section-title {
+			position: absolute;
+			top: 0;
+			right: 0;
+			left: 0;
+			z-index: 100;
+		}
+		.disable-autorun {
+			height: 100%;
 		}
 	}
 	&.single-post {
@@ -1230,15 +1248,16 @@ input[type=submit] {
 		}
 		&.carousel {
 			position: relative;
-			height: 30%;
+			height: 100%;
+			width: 100%;
 			.posts-list {
-				width: 100%;
-				height: 100%;
 				position: relative;
 				background: #0f0f0f;
 				overflow: hidden;
 				margin: 0;
 				padding: 0;
+				height: 100%;
+				width: 100%;
 				li {
 					position: absolute;
 					top: 0;
@@ -1264,6 +1283,7 @@ input[type=submit] {
 						}
 					}
 					article {
+						position: static;
 						.thumbnail-container {
 							width: 100%;
 							height: 100%;
@@ -1349,6 +1369,7 @@ input[type=submit] {
 }
 .sub-content {
 	width: 35%;
+	height: 100%;
 	min-width: 350px;
 	position: absolute;
 	overflow: auto;
@@ -1361,6 +1382,8 @@ input[type=submit] {
 	.content {
 		padding: 20px;
 		color: #f0f0f0;
+		height: 100%;
+		.box-sizing(border-box);
 		.sub-content-header {
 			h3 {
 				color: #fff;
@@ -1454,10 +1477,11 @@ input[type=submit] {
 			}
 		}
 		&.image-gallery {
+			height: 100%;
 			.image-stage-container {
 				border: 5px solid #101010;
 				background: #101010;
-				height: 60%;
+				height: 50%;
 				overflow: hidden;
 				.image-stage {
 					width: 100%;
@@ -1482,7 +1506,7 @@ input[type=submit] {
 				width: 100%;
 				margin: 2% 0 0;
 				padding: 0 0 2%;
-				height: 15%;
+				height: 10%;
 				overflow-y: hidden;
 				overflow-x: auto;
 				&::-webkit-scrollbar {
