update to new mappress

--- a/css/main.less
+++ b/css/main.less
@@ -699,8 +699,8 @@ input[type=submit] {
 		position: relative;
 		z-index: 4;
 	}
-	.story-points {
-		.popup {
+	.leaflet-popup {
+		.leaflet-popup-content {
 			.border-radius(0);
 			img {
 				width: 100%;
