--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ Theme Name: Arte Fora do Museu
 Theme URI: http://arteforadomuseu.com.br/
 Author: Cardume
 Author URI: http://www.cardume.art.br/
-Template: mappress
-Description: Mappress based platform for Arte Fora do Museu project
+Template: jeo
+Description: JEO based platform for Arte Fora do Museu project
 Version: 0.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
