basic fixes for new jeo

--- a/css/main.less
+++ b/css/main.less
@@ -656,6 +656,7 @@ input[type=submit] {
 	left: 0;
 	right: 35%;
 	height: auto;
+	min-height: 0 !important;
 	.home-link {
 		position: absolute;
 		top: 10px;
