--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ html::-webkit-scrollbar-thumb,body::-webkit-scrollbar-thumb{background:#111;}htm
 .middle-content::-webkit-scrollbar-thumb{background:#111;}
 .middle-content:hover::-webkit-scrollbar-thumb{background:#000;}
 .middle-content a{color:#fff;}
-.home .map-container,.map-container{position:absolute;top:120px;bottom:60px;left:0;right:35%;height:auto;}.home .map-container .home-link,.map-container .home-link{position:absolute;top:10px;right:10px;z-index:100;}
+.home .map-container,.map-container{position:absolute;top:120px;bottom:60px;left:0;right:35%;height:auto;min-height:0 !important;}.home .map-container .home-link,.map-container .home-link{position:absolute;top:10px;right:10px;z-index:100;}
 .home .map-container .category-filters,.map-container .category-filters{position:absolute;top:20px;right:20px;z-index:100;-webkit-box-shadow:0 0 10px rgba(0, 0, 0, 0.8);-khtml-box-shadow:0 0 10px rgba(0, 0, 0, 0.8);-moz-box-shadow:0 0 10px rgba(0, 0, 0, 0.8);-o-box-shadow:0 0 10px rgba(0, 0, 0, 0.8);box-shadow:0 0 10px rgba(0, 0, 0, 0.8);}.home .map-container .category-filters li,.map-container .category-filters li{font-size:12px;line-height:12px;text-transform:uppercase;display:block;position:relative;cursor:pointer;padding:10px;background:#555;color:#f0f0f0;font-weight:200;margin:0;}
 .home .map-container .streetview,.map-container .streetview,.home .map-container .map,.map-container .map{width:100%;height:100%;background:#000;}.home .map-container .streetview.streetview,.map-container .streetview.streetview,.home .map-container .map.streetview,.map-container .map.streetview{top:0;left:0;right:0;bottom:0;position:absolute;}
 .home .map-container .map.open,.map-container .map.open{position:relative;z-index:4;}
