start mobile improvements

--- a/css/main.less
+++ b/css/main.less
@@ -2505,6 +2505,10 @@ body.wysiwyg p {
 	.hide-if-mobile {
 		display: none !important;
 	}
+	.displaying-map .map-container,
+	.displaying-map #content {
+		top: 150px;
+	}
 	.displaying-map #masthead,
 	#masthead {
 		height: 150px !important;
