--- a/css/main.less
+++ b/css/main.less
@@ -2506,7 +2506,8 @@ body.wysiwyg p {
 		display: none !important;
 	}
 	.displaying-map .map-container,
-	.displaying-map #content {
+	.displaying-map #content,
+	#content {
 		top: 150px;
 	}
 	.displaying-map #masthead,
