--- a/css/main.less
+++ b/css/main.less
@@ -2500,15 +2500,15 @@ body.wysiwyg p {
 @media screen and (max-width: 767px) {
 	#content,
 	.middle-content {
-		padding-top: @top;
+		padding-top: 150px;
 	}
 	.hide-if-mobile {
 		display: none !important;
 	}
 	.displaying-map .map-container,
-	.displaying-map #content,
-	#content {
+	.displaying-map #content {
 		top: 150px;
+		padding-top: 0;
 	}
 	.displaying-map #masthead,
 	#masthead {
