--- a/css/main.less
+++ b/css/main.less
@@ -2501,6 +2501,8 @@ body.wysiwyg p {
 	#content,
 	.middle-content {
 		padding-top: 150px;
+		font-size: 150%;
+		line-height: 200%;
 	}
 	.hide-if-mobile {
 		display: none !important;
