--- a/css/main.less
+++ b/css/main.less
@@ -518,6 +518,12 @@ input[type=submit] {
 				}
 			}
 		}
+		.dropdown-title {
+			.lsf.icon {
+				float: left;
+				margin-right: 10px;
+			}
+		}
 		.user-meta {
 			float: left;
 			position: relative;
